<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/card_color">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title"
        android:text="@string/desiderata"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginStart="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teamHack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code2Create"
            style="@style/subheading1"
            android:layout_marginBottom="@dimen/side_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_weight="3.5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addHack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Alt_green_bg_button"
            android:text="@string/add_hack"
            android:padding="@dimen/margin_v_small" />
    </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teamPosn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leader"
            style="@style/subheading1"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/side_margin"/>
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/mlChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_learning"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/frontendChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frontend"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/backendChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backend"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/managementChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/management"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cybersecurityChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cybersecurity"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/uiChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/appChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_development"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/blockchainChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockchain"/>


        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>