<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:textColor="@color/white"    android:id="@+id/gettingStartedFragment"    xmlns:tools="http://schemas.android.com/tools"    >    <androidx.appcompat.widget.Toolbar        android:id="@+id/toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="?attr/colorPrimary"        android:backgroundTint="@color/card_color"        android:theme="?attr/actionBarTheme"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <TextView            style="@style/arrow_style_title"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="@dimen/side_margin"            android:text="@string/lessthan" />        <com.google.android.material.textview.MaterialTextView            style="@style/tbr_textview"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:gravity="center"            android:text="@string/getting_started" />        <TextView            style="@style/arrow_style_title"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/greaterthan" />    </androidx.appcompat.widget.Toolbar>    <ScrollView        android:layout_width="match_parent"        android:layout_height="0dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/toolbar"        app:layout_constraintVertical_bias="0.0"        >        <androidx.appcompat.widget.LinearLayoutCompat            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="vertical"            android:padding="@dimen/side_margin">            <androidx.constraintlayout.widget.ConstraintLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:layout_margin="@dimen/margin_large"                android:background="@color/field_fill"                android:id="@+id/imageView2"                >                <ImageView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_margin="@dimen/margin_large"                    android:background="@drawable/ic_ant_design_upload_outlineddummy_pic"                    android:gravity="center"                    app:layout_constraintBottom_toBottomOf="parent"                    app:layout_constraintEnd_toEndOf="parent"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent" />                <ImageView                    android:id="@+id/imageView"                    android:layout_width="0dp"                    android:layout_height="0dp"                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"                    app:layout_constraintEnd_toEndOf="@+id/imageView2"                    app:layout_constraintStart_toStartOf="@+id/imageView2"                    app:layout_constraintTop_toTopOf="@+id/imageView2" />            </androidx.constraintlayout.widget.ConstraintLayout>            <androidx.appcompat.widget.LinearLayoutCompat                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="horizontal"                android:textColor="@color/white"                android:weightSum="2">                <com.google.android.material.textfield.TextInputLayout                    style="@style/TextInputLayout"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginEnd="@dimen/margin_small"                    android:layout_weight="1"                    android:textColor="@color/white"                    android:hint="@string/first_name">                    <com.google.android.material.textfield.TextInputEditText                        android:id="@+id/FirstName"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:textColor="@color/white"/>                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout                    style="@style/TextInputLayout"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginStart="@dimen/margin_small"                    android:layout_weight="1"                    android:hint="@string/last_name"                    android:textColor="@color/white">                    <com.google.android.material.textfield.TextInputEditText                        android:id="@+id/LastName"                        android:layout_width="match_parent"                        android:layout_height="wrap_content" />                </com.google.android.material.textfield.TextInputLayout>            </androidx.appcompat.widget.LinearLayoutCompat>            <com.google.android.material.textfield.TextInputLayout                style="@style/TextInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/username"                android:textColor="@color/white">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/username"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                style="@style/TextInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/college_university"                android:textColor="@color/white">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/college"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <androidx.appcompat.widget.LinearLayoutCompat                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="horizontal"                >                <com.google.android.material.textfield.TextInputLayout                    style="@style/SpinnerDropdown"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginEnd="@dimen/margin_small"                    android:layout_weight="1"                    android:hint="@string/year_of_graduation"                    android:textColor="@color/white">                    <com.google.android.material.textfield.MaterialAutoCompleteTextView                        android:id="@+id/yearGraduation"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:drawableTint="#FFFFFF"                        android:dropDownSelector="@drawable/mail_pass_fields"                        android:padding="@dimen/side_margin"                        android:textColor="@color/white"                        />                </com.google.android.material.textfield.TextInputLayout>            </androidx.appcompat.widget.LinearLayoutCompat>            <com.google.android.material.textfield.TextInputLayout                style="@style/TextInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/linkedin_link"                android:textColor="@color/white">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/linkedin"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                style="@style/TextInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/github_link"                android:textColor="@color/white">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/GithubLink"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                style="@style/TextInputLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/personal_website"                android:textColor="@color/white">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/YourWebsite"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <androidx.appcompat.widget.AppCompatTextView                android:id="@+id/skills"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/side_margin"                android:text="@string/skills"                android:textSize="18sp" />            <com.google.android.material.chip.ChipGroup                android:id="@+id/chipgp"                android:layout_width="match_parent"                android:layout_height="wrap_content"                app:layout_constraintTop_toBottomOf="@id/skills"                android:checkable="false"                app:singleSelection="false">                <com.google.android.material.chip.Chip                    android:id="@+id/backend"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/backend" />                <com.google.android.material.chip.Chip                    android:id="@+id/ml"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/machine_learning" />                <com.google.android.material.chip.Chip                    android:id="@+id/appdev"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/app_development" />                <com.google.android.material.chip.Chip                    android:id="@+id/frontend"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/frontend" />                <com.google.android.material.chip.Chip                    android:id="@+id/design"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/ui_ux_design" />                <com.google.android.material.chip.Chip                    android:id="@+id/management"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/management" />                <com.google.android.material.chip.Chip                    android:id="@+id/blockchain"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/blockchain" />                <com.google.android.material.chip.Chip                    android:id="@+id/cybersecurity"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/cybersecurity" />            </com.google.android.material.chip.ChipGroup>            <com.google.android.material.textfield.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:hint="@string/write_about_yourself">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/description"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:gravity="start"                    android:inputType="textMultiLine"                    android:lines="3"                    android:textColor="@color/white"/>            </com.google.android.material.textfield.TextInputLayout>            <androidx.appcompat.widget.AppCompatButton                android:id="@+id/createProfile"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="20dp"                android:layout_marginTop="32dp"                android:layout_marginEnd="20dp"                android:layout_marginBottom="40dp"                android:text="@string/create_profile"                android:textColor="@color/white"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@id/description" />        </androidx.appcompat.widget.LinearLayoutCompat>    </ScrollView></androidx.constraintlayout.widget.ConstraintLayout>