<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/card_color"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/arrow_style_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_margin"
                    android:text="@string/lessthan" />
                <com.google.android.material.textview.MaterialTextView
                    style="@style/tbr_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Create your team" />
                <TextView
                    style="@style/arrow_style_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greaterthan" />
            </androidx.appcompat.widget.LinearLayoutCompat>




        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/piechart"
        android:layout_width="215dp"
        android:layout_height="174dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_pie_chart"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_goneMarginTop="@dimen/side_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/piechart"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginLeft="@dimen/side_margin"
            style="@style/mail_fields"
            android:hint="Team Name"
            android:textColorHint="@color/text_secondary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subheading2"
            android:text="Skills"
            android:padding="@dimen/side_margin"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin"
            android:background="@color/card_color"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin">




                <com.google.android.material.chip.Chip
                    android:id="@+id/backend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backend" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_learning" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/appdev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_development" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/frontend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frontend" />

                <com.google.android.material.chip.Chip

                    android:id="@+id/design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_ux_design" />

                <com.google.android.material.chip.Chip

                    android:id="@+id/management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/management" />
                <com.google.android.material.chip.Chip

                    android:id="@+id/blockchain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockchain" />
                <com.google.android.material.chip.Chip

                    android:id="@+id/cybersecurity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cybersecurity" />


        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:text="create team"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>